1. New Login Screen !!!! 2. Login service is now request scoped and uses office    reception on session, sets loggedIn state 3. Renamed officeState to officeReception, session scoped , 	keeps user id and loggedIn state 4. crateBean renamed to createUserService (@Named) 5. Added 3 new logo images 6. crated xhtml officeReception 7. added navigation rule to receptino area 8. added css login styles 9. changed prime-faces skin to south-street! 10. removed random import on DentistBean

--- a/Cloudental-cdi/src/main/webapp/resources/css/login-style.css
+++ b/Cloudental-cdi/src/main/webapp/resources/css/login-style.css
@@ -1,6 +1,21 @@
-@CHARSET "UTF-8";
+@charset "utf-8";
 
-.tWelcome
- {     
-   background-image: url(../images/cloudM.png) !important;
- }	
+.username {
+	position:fixed;
+	left:220px;
+	width:146px;
+	height:24px;
+	top:234px;
+}
+
+.password {
+	position:fixed;
+	left:222px;
+	top:272px;
+}
+
+.lbutton {
+	position:fixed;
+	left:255px;
+	top:322px;
+}	
