more on login screen

--- a/Cloudental-cdi/src/main/webapp/resources/css/cloudental.css
+++ b/Cloudental-cdi/src/main/webapp/resources/css/cloudental.css
@@ -6,3 +6,5 @@
 .ui-widget,.ui-widget .ui-widget {
 	font-size: 90% !important;
 }
+
+h1 { font-family: Garamond, "Times New Roman",  serif; font-size: 200%; color: blue}
