--- a/Cloudental-cdi/src/main/webapp/resources/css/scheduler-style.css
+++ b/Cloudental-cdi/src/main/webapp/resources/css/scheduler-style.css
@@ -9,8 +9,9 @@
 
 .latestActivity {
 	position: fixed;
-	width: 257px;
-	top: 106px;
+	width: 340px;
+	height: 500px;
+	top: 110px;
 	left: 77%;
 }
  
