added global style sheets control over component font etc changed daily report png , added adobe logo added styles per page changed patients screen

--- a/Cloudental-cdi/src/main/webapp/resources/css/patients-style.css
+++ b/Cloudental-cdi/src/main/webapp/resources/css/patients-style.css
@@ -1,8 +1,17 @@
 @CHARSET "UTF-8";
 
+.comment {
+	width: 40%;
+}
+
+.newPatientPanel {
+	margin-left:auto;
+	margin-right:auto;	
+}
+
 .patientList {
-				font-family: Arial serif;
-			font-size: 6;
-		width: 50px;
-		height: 50px;
+	margin-left:auto;
+	margin-right:auto;
+	position: relative;
+	top: 10px;
 }
