--- a/Cloudental-cdi/src/main/webapp/resources/css/login-style.css
+++ b/Cloudental-cdi/src/main/webapp/resources/css/login-style.css
@@ -1,30 +1,26 @@
 @charset "utf-8";
 
 .username, .password, .directLogin {
-	position: relative;
-	left: 40%;
-	top: 40%;
-	width: 200px;
-	height: 14px;
+	font-family: sans-serif !important;
+	font-size: 11px !important;
 }
 .username 	{	 }
 .password 	{	 }
 .directLogin {   }
-
-
-.loginbutton, .newuserbutton, .contactUs {
-	position:fixed;
-	width: 90px;
-	height: 28px;
-	left: 5px;
+.loginbutton 	{	
+	position: relative;	
+	left: 54px;
+	top: 8px;
 }
-.loginbutton 	{	top:50px;	}
-.newuserbutton 	{	top:5px; 	}
-.contactUs		{	top: 95px;	}
-
-
+.newuserbutton 	{		}
+.contactUs		{		}
 .logo {
 	position: relative;
-	left: 30%;
-	top: 50%;
+	top: 60px;
+	left: 200px;
+}
+.loginForm {
+	position: relative;
+	top: 20px;
+	left: 500px;
 }
