--- a/CloudentalUtils/jasper/daily_report.jrxml
+++ b/CloudentalUtils/jasper/daily_report.jrxml
@@ -16,177 +16,203 @@
 	<parameter name="DENTISTID" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[-99]]></defaultValueExpression>
 	</parameter>
+	<parameter name="STARTDATE" class="java.sql.Timestamp"/>
+	<parameter name="ENDDATE" class="java.sql.Timestamp"/>
 	<queryString>
-		<![CDATA[select v.title, v.visitdate, v.enddate, v.comments,p.id,  p.surname, p.name from patient p
-join activity act
-on act.patienthistid = p.id
-join visit v
-on v.activityid = act.id
-where p.dentistid = $P{DENTISTID}]]>
+		<![CDATA[select p.id,  p.surname, p.name, v.visitdate, v.enddate, v.comments from patient p join activity act on act.patienthistid = p.id join visit v on v.activityid = act.id where p.dentistid = $P{DENTISTID} and v.visitdate > $P{STARTDATE} and v.enddate < $P{ENDDATE}]]>
 	</queryString>
-	<field name="title" class="java.lang.String"/>
-	<field name="visitdate" class="java.sql.Timestamp"/>
-	<field name="enddate" class="java.sql.Timestamp"/>
-	<field name="comments" class="java.lang.String"/>
 	<field name="id" class="java.lang.Integer"/>
 	<field name="surname" class="java.lang.String"/>
 	<field name="name" class="java.lang.String"/>
-	<group name="Patient">
-		<groupExpression><![CDATA[$F{id}]]></groupExpression>
-		<groupHeader>
-			<band height="4"/>
-		</groupHeader>
-		<groupFooter>
-			<band height="6"/>
-		</groupFooter>
-	</group>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
+	<field name="visitdate" class="java.sql.Timestamp"/>
+	<field name="enddate" class="java.sql.Timestamp"/>
+	<field name="comments" class="java.lang.String"/>
+	<variable name="VISIT_COUNT" class="java.lang.Integer" calculation="Count">
+		<variableExpression><![CDATA[$F{id}]]></variableExpression>
+	</variable>
+	<variable name="FIRST_VISIT" class="java.sql.Timestamp" calculation="Lowest">
+		<variableExpression><![CDATA[$F{visitdate}]]></variableExpression>
+	</variable>
+	<variable name="LAST_VISIT" class="java.sql.Timestamp" calculation="Highest">
+		<variableExpression><![CDATA[$F{visitdate}]]></variableExpression>
+	</variable>
 	<title>
-		<band height="136" splitType="Stretch">
+		<band height="146" splitType="Stretch">
 			<image>
 				<reportElement uuid="5ff0045f-c716-4447-826e-ea3f05c00d9c" x="0" y="0" width="164" height="126"/>
-				<imageExpression><![CDATA["coffee.jpg"]]></imageExpression>
+				<imageExpression><![CDATA["logo_cd.png"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="5c6b2098-61e6-4281-b0e4-d5e9027c1ad9" style="Title" x="270" y="0" width="263" height="62"/>
+				<reportElement uuid="5c6b2098-61e6-4281-b0e4-d5e9027c1ad9" style="Title" x="269" y="31" width="413" height="62" forecolor="#3E85B5"/>
 				<textElement verticalAlignment="Middle">
 					<font pdfFontName="Times-Roman"/>
 				</textElement>
-				<text><![CDATA[Visit Report]]></text>
+				<text><![CDATA[Daily Visit Report]]></text>
 			</staticText>
-			<staticText>
-				<reportElement uuid="01aff686-9bbf-432f-a27f-adbc2e45fae2" style="SubTitle" x="303" y="62" width="196" height="22"/>
+			<textField pattern="EEEEE dd, MMMMM yyyy">
+				<reportElement uuid="55c528f1-2474-48eb-9ed9-363bd35e3075" x="269" y="93" width="413" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman" pdfFontName="Times-Roman"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
-				<text><![CDATA[by Cloudental]]></text>
-			</staticText>
-			<image>
-				<reportElement uuid="8d6796f2-bced-40b0-9bca-2121e633d6c1" x="633" y="-73" width="219" height="209"/>
-				<imageExpression><![CDATA["coffee_stain.png"]]></imageExpression>
-			</image>
+				<textFieldExpression><![CDATA[$P{STARTDATE}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
-	<pageHeader>
-		<band splitType="Stretch"/>
-	</pageHeader>
 	<columnHeader>
-		<band height="16" splitType="Stretch">
-			<line>
-				<reportElement uuid="1e97609c-a348-4b88-966d-f1ca70ce54a2" positionType="FixRelativeToBottom" x="0" y="15" width="802" height="1"/>
-				<graphicElement>
-					<pen lineWidth="0.5" lineColor="#999999"/>
-				</graphicElement>
-			</line>
+		<band height="26" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="63bf6bd6-0d85-4167-8484-ff5744fe2f0f" style="Column header" x="199" y="0" width="150" height="15" forecolor="#736343"/>
-				<textElement/>
-				<text><![CDATA[title]]></text>
+				<reportElement uuid="2b44a34a-3dfd-4e9e-8b29-cac1cc7c4b28" style="Column header" mode="Transparent" x="214" y="1" width="96" height="15" forecolor="#3E85B5" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Arial" size="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[start time]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="2b44a34a-3dfd-4e9e-8b29-cac1cc7c4b28" style="Column header" x="351" y="0" width="149" height="15" forecolor="#736343"/>
-				<textElement/>
-				<text><![CDATA[visitdate]]></text>
+				<reportElement uuid="32802c32-7c8b-4632-b888-a2b5731639a5" style="Column header" mode="Transparent" x="310" y="1" width="135" height="15" forecolor="#3E85B5" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Arial" size="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[end time]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="32802c32-7c8b-4632-b888-a2b5731639a5" style="Column header" x="500" y="0" width="135" height="15" forecolor="#736343"/>
-				<textElement/>
-				<text><![CDATA[enddate]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="a05c4900-5363-413a-a2ad-a3064ad5e13d" style="Column header" x="635" y="0" width="127" height="15" forecolor="#736343"/>
-				<textElement/>
+				<reportElement uuid="a05c4900-5363-413a-a2ad-a3064ad5e13d" style="Column header" mode="Transparent" x="445" y="1" width="357" height="15" forecolor="#3E85B5" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Arial" size="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
 				<text><![CDATA[comments]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="63bf6bd6-0d85-4167-8484-ff5744fe2f0f" style="Column header" x="1" y="0" width="150" height="15" forecolor="#736343"/>
-				<textElement/>
-				<text><![CDATA[Patient ]]></text>
+				<reportElement uuid="63bf6bd6-0d85-4167-8484-ff5744fe2f0f" style="Column header" mode="Transparent" x="0" y="1" width="214" height="15" forecolor="#3E85B5" backcolor="#FFFFFF"/>
+				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" markup="none">
+					<font fontName="Arial" size="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[    Patient Surname & name]]></text>
 			</staticText>
+			<line>
+				<reportElement uuid="389834cc-e4cb-4416-b4cc-d80c1ce63262" x="0" y="16" width="802" height="1"/>
+			</line>
+			<line>
+				<reportElement uuid="57eb4b76-3867-40c3-a3c2-2544e8a2cd31" x="0" y="0" width="802" height="1"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="15" splitType="Stretch">
-			<frame>
-				<reportElement uuid="e5b6ed18-90aa-4715-9293-0a53c134fbce" style="Row" mode="Opaque" x="0" y="0" width="802" height="15"/>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="058f74cf-69b5-47e0-9f37-9fbd445fadb4" style="Detail" x="349" y="0" width="149" height="15"/>
-					<textElement/>
-					<textFieldExpression><![CDATA[$F{visitdate}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="5c2ee192-c6c1-4f26-a46e-25343f0f7623" style="Detail" x="498" y="0" width="135" height="15"/>
-					<textElement/>
-					<textFieldExpression><![CDATA[$F{enddate}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="312dd2e7-ba27-483b-b7ba-9d0e9885e979" style="Detail" x="635" y="0" width="127" height="15"/>
-					<textElement/>
-					<textFieldExpression><![CDATA[$F{comments}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="ace33903-9990-4a96-b294-a8d1e46924f3" style="Detail" x="199" y="0" width="150" height="15"/>
-					<textElement/>
-					<textFieldExpression><![CDATA[$F{title}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement uuid="c69490c2-ff3b-4604-bf5b-1b16dd8e3524" x="101" y="0" width="100" height="15"/>
-					<textElement>
-						<font fontName="Arial" size="12"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement uuid="b0ac30cc-428a-457a-bab5-3c73783ed9a1" x="1" y="0" width="100" height="15"/>
-					<textElement>
-						<font fontName="Arial" size="12"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{surname}]]></textFieldExpression>
-				</textField>
-			</frame>
+		<band height="26" splitType="Stretch">
+			<textField isStretchWithOverflow="true" pattern="h.mm a">
+				<reportElement uuid="058f74cf-69b5-47e0-9f37-9fbd445fadb4" style="Detail" x="214" y="2" width="96" height="15" forecolor="#FF0000"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{visitdate}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="h.mm a">
+				<reportElement uuid="5c2ee192-c6c1-4f26-a46e-25343f0f7623" style="Detail" x="310" y="2" width="135" height="15"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{enddate}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true">
+				<reportElement uuid="312dd2e7-ba27-483b-b7ba-9d0e9885e979" style="Detail" x="445" y="2" width="332" height="15"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{comments}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="c69490c2-ff3b-4604-bf5b-1b16dd8e3524" x="116" y="2" width="100" height="15" forecolor="#000000"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="b0ac30cc-428a-457a-bab5-3c73783ed9a1" x="16" y="2" width="100" height="15" forecolor="#FF0000"/>
+				<textElement>
+					<font fontName="Arial" size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{surname}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="6" splitType="Stretch">
-			<line>
-				<reportElement uuid="0d4b927c-1f02-41ed-b666-dcbf4da10a6e" positionType="FixRelativeToBottom" x="0" y="3" width="802" height="1"/>
-				<graphicElement>
-					<pen lineWidth="0.5" lineColor="#999999"/>
-				</graphicElement>
-			</line>
-		</band>
-	</columnFooter>
 	<pageFooter>
 		<band height="25" splitType="Stretch">
 			<frame>
-				<reportElement uuid="3ff8bd2e-764d-4a22-976c-de8c721b6ede" mode="Opaque" x="-21" y="1" width="843" height="24" forecolor="#D0B48E" backcolor="#F2EBDF"/>
+				<reportElement uuid="3ff8bd2e-764d-4a22-976c-de8c721b6ede" mode="Opaque" x="0" y="2" width="802" height="19" forecolor="#F0F0F0" backcolor="#CCCCCC"/>
 				<textField evaluationTime="Report">
-					<reportElement uuid="6aadc1f1-381c-46b9-a293-6e7bac5ef6b5" style="Column header" x="783" y="1" width="40" height="20" forecolor="#736343"/>
+					<reportElement uuid="6aadc1f1-381c-46b9-a293-6e7bac5ef6b5" style="Column header" x="762" y="1" width="40" height="17" forecolor="#000000"/>
 					<textElement verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="1ec92363-e2c8-459b-9bb3-3f35d461fd97" style="Column header" x="703" y="1" width="80" height="20" forecolor="#736343"/>
+					<reportElement uuid="1ec92363-e2c8-459b-9bb3-3f35d461fd97" style="Column header" x="682" y="0" width="80" height="18" forecolor="#000000"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 				</textField>
-				<textField pattern="EEEEE dd MMMMM yyyy">
-					<reportElement uuid="a3f0a6a8-d4e1-44de-af25-9a2d94b57be5" style="Column header" x="22" y="1" width="197" height="20" forecolor="#736343"/>
-					<textElement verticalAlignment="Middle">
-						<font size="10" isBold="false"/>
-					</textElement>
-					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-				</textField>
 			</frame>
+			<line>
+				<reportElement uuid="0d4b927c-1f02-41ed-b666-dcbf4da10a6e" positionType="FixRelativeToBottom" x="2" y="0" width="802" height="1" backcolor="#000000"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineColor="#999999"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement uuid="0be4296b-a7a2-4211-b591-2775d5c5e8d4" x="0" y="1" width="802" height="1"/>
+			</line>
 		</band>
 	</pageFooter>
 	<summary>
-		<band splitType="Stretch"/>
+		<band height="31">
+			<textField>
+				<reportElement uuid="0d9cc4a5-67e0-4711-99c6-2a7b906d0c7a" mode="Opaque" x="128" y="8" width="219" height="20" backcolor="#FFFFCC"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{VISIT_COUNT}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="4b8af4c9-bcd0-4dda-a031-4bf1521f1a5a" mode="Opaque" x="0" y="8" width="128" height="20" backcolor="#FFFFCC"/>
+				<textElement verticalAlignment="Middle"/>
+				<text><![CDATA[TOTAL VISITS TODAY :]]></text>
+			</staticText>
+			<line>
+				<reportElement uuid="9d1c9141-a1d0-47b4-8620-10232e1ef7eb" x="0" y="7" width="802" height="1"/>
+			</line>
+			<line>
+				<reportElement uuid="5bf2e4b7-d2eb-40b6-9abb-fbd76a99bfb8" x="0" y="28" width="802" height="1"/>
+			</line>
+			<textField pattern="h.mm a" isBlankWhenNull="false">
+				<reportElement uuid="b28487d6-b02e-4e3d-9892-0115c3c6ae9a" mode="Opaque" x="400" y="8" width="300" height="20" forecolor="#000000" backcolor="#FFFFCC"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
+					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{FIRST_VISIT}]]></textFieldExpression>
+			</textField>
+			<textField pattern="h.mm a" isBlankWhenNull="false">
+				<reportElement uuid="7319aa94-be06-4494-9c75-2566f1783248" mode="Opaque" x="752" y="8" width="50" height="20" forecolor="#000000" backcolor="#FFFFCC"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
+					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{LAST_VISIT}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="0a3eb9dd-42e9-4240-be3b-0da08e7fd4bd" mode="Opaque" x="347" y="8" width="53" height="20" forecolor="#000000" backcolor="#FFFFCC"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle" rotation="None" markup="none">
+					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[Starting at :]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="182d0b53-7a6f-4e4c-b5c8-b42f2b49ae61" mode="Opaque" x="700" y="8" width="52" height="20" forecolor="#000000" backcolor="#FFFFCC"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle" rotation="None" markup="none">
+					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<paragraph lineSpacing="Single"/>
+				</textElement>
+				<text><![CDATA[Ending at :]]></text>
+			</staticText>
+		</band>
 	</summary>
 </jasperReport>
