--- a/CloudentalUtils/jasper/default_report.jrxml
+++ b/CloudentalUtils/jasper/default_report.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="default_report" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ede74e9b-1d85-4882-b30b-f1b327f4a033">
-	<property name="ireport.zoom" value="5.054470284992948"/>
-	<property name="ireport.x" value="307"/>
-	<property name="ireport.y" value="172"/>
+	<property name="ireport.zoom" value="0.9090909090909105"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
 	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14" isBold="true" pdfFontName="Times-Roman"/>
@@ -18,12 +18,22 @@
 		<![CDATA[select id from dentist]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer"/>
+	<background>
+		<band height="623">
+			<image>
+				<reportElement uuid="1c81c915-1c4a-44e0-a491-67f31da572d7" mode="Transparent" x="162" y="195" width="230" height="232">
+					<printWhenExpression><![CDATA[$V{PAGE_NUMBER} == 1]]></printWhenExpression>
+				</reportElement>
+				<imageExpression><![CDATA["logo_cd.png"]]></imageExpression>
+			</image>
+		</band>
+	</background>
 	<title>
-		<band height="207" splitType="Stretch">
+		<band height="255" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="47183b63-c7ea-480b-9ac2-44d029834b75" style="SubTitle" x="231" y="52" width="156" height="29"/>
+				<reportElement uuid="47183b63-c7ea-480b-9ac2-44d029834b75" style="SubTitle" x="194" y="73" width="166" height="29"/>
 				<textElement textAlignment="Right">
-					<font size="22" isBold="false"/>
+					<font fontName="SansSerif" size="22" isBold="false"/>
 				</textElement>
 				<text><![CDATA[No Report found]]></text>
 			</staticText>
@@ -31,25 +41,18 @@
 				<reportElement uuid="9d2b39c5-71a2-4945-9d92-69a720791e52" mode="Opaque" x="0" y="0" width="555" height="13" forecolor="#D0B48E" backcolor="#3E85B5"/>
 			</frame>
 			<staticText>
-				<reportElement uuid="c6050ed4-1415-44fa-bdf8-e9c429a009d5" x="231" y="96" width="276" height="20"/>
-				<textElement/>
+				<reportElement uuid="c6050ed4-1415-44fa-bdf8-e9c429a009d5" x="164" y="117" width="227" height="20"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<text><![CDATA[No daily report has been generated for this user.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="837ec353-8560-4183-b25c-530519c1c790" x="231" y="116" width="314" height="20"/>
-				<textElement/>
-				<text><![CDATA[Enable daily-reports from the user-preferences menu to receive ]]></text>
-			</staticText>
-			<image>
-				<reportElement uuid="1c81c915-1c4a-44e0-a491-67f31da572d7" x="24" y="41" width="265" height="166">
-					<printWhenExpression><![CDATA[$V{PAGE_NUMBER} == 1]]></printWhenExpression>
-				</reportElement>
-				<imageExpression><![CDATA["logo_cd.png"]]></imageExpression>
-			</image>
-			<staticText>
-				<reportElement uuid="837ec353-8560-4183-b25c-530519c1c790" x="231" y="137" width="276" height="20"/>
-				<textElement/>
-				<text><![CDATA[daily reports]]></text>
+				<reportElement uuid="837ec353-8560-4183-b25c-530519c1c790" x="95" y="138" width="365" height="20"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<text><![CDATA[Enable daily-reports from the user-preferences menu to receive daily reports]]></text>
 			</staticText>
 			<textField pattern="EEE dd/MM/yy">
 				<reportElement uuid="a0208af9-aab2-4e2c-ae0b-12748d42058f" x="2" y="0" width="247" height="13" forecolor="#FFFFFF"/>
